--- a/App Web (Front-End)/assets/css/form.css
+++ b/App Web (Front-End)/assets/css/form.css
@@ -22,16 +22,13 @@
 	content: "\2605"; /*cheio*/
 }
 
-.star-icon.ativo ~ .star-icon::before {
-	content: "\2606"; /*vazio*/
+.star-icon:not(.ativo)::before {
+    content: "\2606"; /*vazio*/
 }
 
-.avaliacao:hover .star-icon::before {
-	content: "\2605"; /*cheio*/
-}
-
-.star-icon:hover ~ .star-icon::before {
-	content: "\2606"; /*vazio*/
+.star-icon:hover,
+.star-icon:hover ~ .star-icon {
+    color: #04d9ff;
 }
 
 @media screen and (max-width: 767px) {
