--- a/App Web (Front-End)/assets/css/geral.css
+++ b/App Web (Front-End)/assets/css/geral.css
@@ -1,12 +1,36 @@
 body {
 	background-color: #1e1e1e;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-		url("./../img/background-appweb.jpg");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+		url("./../img/background-appweb-melhor.png");
 	color: #ddd;
 	margin: 0;
 	padding: 20px;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+		Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+		sans-serif;
 }
 
 h1 {
-	color: #04d9ff;
+	color: #fff;
+	text-align: center;
+	margin-top: 0;
+}
+
+h1 img {
+	width: 150px;
+	height: auto;
+}
+
+@media screen and (max-width: 767px) {
+	body {
+		background-color: #1e1e1e;
+		background-image: linear-gradient(
+				rgba(0, 0, 0, 0.7),
+				rgba(0, 0, 0, 0.7)
+			),
+			url("./../img/background-appweb.jpg");
+		color: #ddd;
+		margin: 0;
+		padding: 20px;
+	}
 }
