--- a/App Web (Front-End)/assets/css/gameList.css
+++ b/App Web (Front-End)/assets/css/gameList.css
@@ -1,3 +1,37 @@
 .game-div {
-  background-color: #333;
+	padding: 18px;
+	border: solid;
+	border-width: 6px;
+	border-color: #7654b8;
+	border-radius: 20px;
+	display: inline-flex;
+	margin-bottom: 40px;
+}
+
+.img-capa {
+	position: relative;
+	width: 45%;
+	object-fit: contain;
+}
+
+.game-data {
+	padding: 0;
+	list-style: none;
+	position: relative;
+	left: 10%;
+	word-wrap: break-word;
+	max-width: 45%;
+	box-sizing: border-box;
+}
+
+.li-title {
+	font-weight: bolder;
+	font-size: 25px;
+	margin-bottom: 40px;
+}
+
+.li-data {
+	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: 10px;
 }
